nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: kube2-nginx-deployement
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: webserver
  template:
    metadata:
      labels:
        tier: webserver
    spec:
      containers:
      - args:
        - HOME
        command:
        - echo
        image: nginx
        name: nginx-container
        ports:
        - containerPort: 8080
