nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: kube2-nginx-pod
spec:
  containers:
  - args:
    - HOME
    command:
    - echo
    image: nginx
    name: nginx-container
    ports:
    - containerPort: 8080
