pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: tomcat
  name: kube2-tomcat9-pod
spec:
  containers:
  - args:
    - HOME
    command:
    - echo
    image: kuberiter/demo:tomcat-v1
    name: tomcat-test
    ports:
    - containerPort: 8088
