tomcat9-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tomcat
  name: kube2-tomcat9-deployement
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: webserver
  template:
    metadata:
      labels:
        tier: webserver
    spec:
      containers:
      - args:
        - HOME
        command:
        - echo
        image: kuberiter/demo:tomcat-v1
        name: tomcat-test
        ports:
        - containerPort: 8088
