nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: kube2-nginx-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: nginx
  type: ClusterIP
