tomcat9-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tomcat
  name: kube2-tomcat9-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8088
  selector:
    app: tomcat
  type: ClusterIP
