nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: nginx
  name: kube2-nginx-ingress
spec:
  rules:
  - host: ''
    http:
      paths:
      - backend:
          serviceName: nginx-services
          servicePort: 80
        path: /app
